# ozon_demo_project

./: .env.example  config.py  pyproject.toml
ozon_demo_project/: application.py
ozon_demo_project/components/: cookie_popup.py  header.py
ozon_demo_project/pages/: search_result_page.py
tests/: conftest.py  test_cookie_popup.py  test_header.py  test_search.py
